5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1764_1580.log
== TEST (2019-05-26 19:40:58) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas")))
nomes= array(eval(input("Insira os nomes")))
print(notas)
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:40:59) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas")))
nomes= array(eval(input("Insira os nomes")))
print(notas)
print(nomes)
-- EXECUTION TIME:
0.532176
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Insira as notasInsira os nomes[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Insira as notasInsira os nomes[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:48:58) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i>size(notas) and i>size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6):
		s2+=2
		
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:49:34) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i>size(notas) and i>size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6):
		s2+=2
i+=1
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:50:05) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i>size(notas) and i>size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6):
		s2+=2
	i+=1
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:51:07) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6):
		s2+=2
	i+=1
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:51:37) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6):
		s2+=1
	i+=1
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:54:20) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6 and notas[i]>0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:54:32) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6 and notas[i]>0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:54:54) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6 and notas[i]>0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:55:37) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6 and notas[i]<0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:56:12) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6 or notas[i]<0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:57:51) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6 and notas[i]<0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:58:09) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas) and i < size(nomes)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<5 and notas[i]<0):
		s2+=1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:59:23) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<5 and notas[i]<0):
		s2+=1
	
	
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:00:43) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<5 and notas[i]<0):
		s2=s2+1
	i+=1
	
print(s1)
print(s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:02:25) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while (i < size(notas)):
	if(notas[i]==-1):
		s1+=1
	if(notas[i]<=6 and notas[i]<0):
		s2=s2+1
	i+=1
	print(s2)
	print(s1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:03:56) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2=s2+1
	i+=1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:04:08) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2=s2+1
	i+=1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:04:41) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2=s2+1
	i+=1
print(s1)
print(s2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:07:42) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	
	i+=1
print(s3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:09:47) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>0):
		s4=sum(i)/size(i)
	i+=1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:10:13) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>0):
		s4=sum(i)/size(i)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:12:24) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>0):
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:12:35) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>0):
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))

print(round(s4,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:38:20) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]=>0):
		
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
File "XXXX", line 19
    if(notas[i]=>0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:38:36) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>=0):
		
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:40:33) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:40:48) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:43:08) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas[:0])/size(notas[:0])
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:43:41) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas[i:0])/size(notas[i:0])
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:23) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas[:-1])/size(notas[:-1])
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:56:10) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	elif(notas[i]<6 and notas[i]>0):
		s3+=1
	elif(notas[i]> -1):
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:56:44) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)
	i+=1
print(round(s4,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:01:35) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)

	
	i+=1
notas=nomes
maior=(max(nomes))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:02:00) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)

	
	i+=1
notas=nomes
maior=(max(nomes))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:02:03) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):
	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)

	
	i+=1
notas=nomes
maior=(max(nomes))
print(maior)

-- EXECUTION TIME:
0.503424
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:03:09) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)	
	i+=1
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(s4)
print(maior)

-- EXECUTION TIME:
0.380665
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Insira as notas:Insira os nomes:0
7
3
6.392727272727272
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:03:11) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)	
	i+=1
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(s4)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:04:18) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]!= -1):
		s4=sum(notas)/size(notas)	
	i+=1
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(s4)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:06:18) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)	
	i+=1
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:06:40) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]> -1):
		s4=sum(notas)/size(notas)	
	i+=1
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(maior)

-- EXECUTION TIME:
0.460198
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:51) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(v[i]>=0):
		po+=1
	i=i+1
s4= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		s4[a]=notas[i]
		a+=1
	i+=1
print(s4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:53) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>=0):
		po+=1
	i=i+1
s4= zeros(po,dtype=int)
i=0
while (i < size(notas)):
	if(v[i]>=0):
		s4[a]=notas[i]
		a+=1
	i+=1
print(s4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:01) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>=0):
		po+=1
	i=i+1
s4= zeros(po,dtype=int)
i=0
while (i < size(notas)):
	if(notas[i]>=0):
		s4[a]=notas[i]
		a+=1
	i+=1
print(s4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:36) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if(notas[i]>=0):
		s4+=1
	i=i+1
s4= zeros(po,dtype=int)
i=0
while (i < size(notas)):
	if(notas[i]>=0):
		s4[a]=notas[i]
		a+=1
	i+=1
print(s4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:20) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
po=0
a=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
while(i < size(nomes)):
	if(nomes[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(nomes)):
	if(v[nomes]>=0):
		v2[a]=nomes[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:39) 
-- CODE:
from numpy import*
v= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)	
	
	
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:49) 
-- CODE:
from numpy import*
v= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:27) 
-- CODE:
from numpy import*
v= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(v)):	
	if(v[i]==-1):
		s1+=1
	if(v[i]>=6): 
		s2+=1
	if(v[i]<6 and v[i]>0):
		s3+=1
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:33) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
		notas=nota1
		nota1.remove(-1)
print(nome1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:05) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
 notas=nota1
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
	
		nota1.remove(-1)
print(nome1)

-- ERROR:
File "XXXX", line 9
    notas=nota1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:09) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
notas=nota1
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
	
		nota1.remove(-1)
print(nome1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:55) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0
while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
	
		notas.remove(-1)
print(nome1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:50:36) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
		notas=nota1
		nota1.remove(-1)
print(nomes2)
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:51:07) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))

i=0
s1=0
s2=0
s3=0
s4=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(notas[i]>=6): 
		s2+=1
	if(notas[i]<6 and notas[i]>0):
		s3+=1
	if	(notas[i]==-1):
		notas=nota1
		nota1.remove(-1)
print(nomes2)
notas=nomes
maior=(max(nomes))
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:58:42) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
m=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(6<= notas[i]<=10): 
		s2+=1
		m=m+notas[i]
	if(0<=notas[i]<6 ):
		s3+=1
	if(nomes[i]==max(nomes)):
		s5=s[i]
qt=s2+s3
s4=m/qt
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:58:53) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
m=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(6<= notas[i]<=10): 
		s2+=1
		m=m+notas[i]
	if(0<=notas[i]<6 ):
		s3+=1
	if(nomes[i]==max(nomes)):
		s5=s[i]
qt=s2+s3
s4=m/qt
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:59:31) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
m=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(6<= notas[i]<=10): 
		s2+=1
		m=m+notas[i]
	if(0<=notas[i]<6 ):
		s3+=1
	if(nomes[i]==max(nomes)):
		s5=s[i]
qt=s2+s3
s4=m/qt
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:05:35) 
-- CODE:
from numpy import*
n=array(eval(input("Insira as  notas:")))
no=array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
m=0

while(i<size(n)):
	if(n[i]==-1):
		s1+=1
	if(6<=n[i]<=10):
		s2+=1
		m=m+n[i]
	if(0<=a[i]<6):
		s3+=1
		m=m+n[i]
	if(n[i]==max(n)):
		s5=s[i]
	i=i+1
quantidade=s2+s3
s4=m/quantidade
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:06:27) 
-- CODE:
from numpy import*
n=array(eval(input("Insira as  notas:")))
no=array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
m=0

while(i<size(n)):
	if(n[i]==-1):
		s1+=1
	if(6<=n[i]<=10):
		s2+=1
		m=m+n[i]
	if(0<=n[i]<6):
		s3+=1
		m=m+n[i]
	if(n[i]==max(n)):
		s5=s[i]
	i=i+1
quantidade=s2+s3
s4=m/quantidade
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:07:01) 
-- CODE:
from numpy import*
n=array(eval(input("Insira as  notas:")))
no=array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
m=0

while(i<size(n)):
	if(n[i]==-1):
		s1+=1
	if(6<=n[i]<=10):
		s2+=1
		m=m+n[i]
	if(0<=n[i]<6):
		s3+=1
		m=m+n[i]
	if(n[i]==max(n)):
		s5=no[i]
	i=i+1
quantidade=s2+s3
s4=m/quantidade
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:07:39) 
-- CODE:
from numpy import*
n=array(eval(input("Insira as  notas:")))
no=array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
m=0

while(i<size(n)):
	if(n[i]==-1):
		s1+=1
	if(6<=n[i]<=10):
		s2+=1
		m=m+n[i]
	if(0<=n[i]<6):
		s3+=1
		m=m+n[i]
	if(n[i]==max(n)):
		s5=no[i]
	i=i+1
quantidade=s2+s3
s4=m/quantidade
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)
-- EXECUTION TIME:
1.12885
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:08:02) 
-- CODE:
from numpy import*
notas= array(eval(input("Insira as notas:")))
nomes= array(eval(input("Insira os nomes:")))
i=0
s1=0
s2=0
s3=0
m=0

while(i < size(notas)):	
	if(notas[i]==-1):
		s1+=1
	if(6<= notas[i]<=10): 
		s2+=1
		m=m+notas[i]
	if(0<=notas[i]<6 ):
		s3+=1
	if(nomes[i]==max(nomes)):
		s5=s[i]
qt=s2+s3
s4=m/qt
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)

-- EXECUTION TIME:
536.673
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 14:07:03) 
-- CODE:
from numpy import*
n=array(eval(input("Insira as  notas:")))
no=array(eval(input("Insira os nomes:")))

i=0
s1=0
s2=0
s3=0
m=0

while(i<size(n)):
	if(n[i]==-1):
		s1+=1
	if(6<=n[i]<=10):
		s2+=1
		m=m+n[i]
	if(0<=n[i]<6):
		s3+=1
		m=m+n[i]
	if(n[i]==max(n)):
		s5=no[i]
	i=i+1
quantidade=s2+s3
s4=m/quantidade
print(s1)
print(s2)
print(s3)
print(round(s4,2))
print(s5)
-- EXECUTION TIME:
1.08796
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
